# financial_rag_chatbot1

./: .dockerignore  .gitignore  Dockerfile.api  Dockerfile.ui  LICENSE  README.md  docker-compose.yml  handoff.md  pyproject.toml  regulator-ai-key.pem
data/: document_registry.json
scripts/: ingest.py
src/: config.py
src/api/: main.py  models.py  routes.py
src/generation/: chain.py
src/ingestion/: chunker.py  embedder.py  parser.py  scraper.py
src/retrieval/: vector_store.py
ui/: app.py
